// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryCloudDrawer > во встроенной панели отмечает и снимает категории 1`] = `
<div>
  <aside
    aria-label="Фильтр по категориям"
    style="background: rgb(230, 244, 255); border: 1px solid rgb(145, 202, 255); border-radius: 8px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
      0 1px 6px -1px rgba(0, 0, 0, 0.02),
      0 2px 4px 0 rgba(0, 0, 0, 0.02); flex-shrink: 0; padding: 16px; width: 280px;"
  >
    <span
      class="ant-typography"
      style="color: rgb(22, 119, 255); display: block; margin-bottom: 12px;"
    >
      <strong>
        Категории
      </strong>
    </span>
    <div
      class="ant-flex ant-flex-wrap-wrap"
      style="gap: 8px;"
    >
      <span>
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
          style="background: rgb(22, 119, 255); border: 1px solid rgb(22, 119, 255); border-radius: 4px; color: rgb(255, 255, 255); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
        >
          <span>
            Алоэ
          </span>
        </span>
      </span>
      <span>
        <span
          class="ant-tag ant-tag-checkable"
          style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
        >
          <span>
            Пальмы
          </span>
        </span>
      </span>
    </div>
  </aside>
</div>
`;

exports[`CategoryCloudDrawer > закрывает выезжающую панель 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-left ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask ant-drawer-mask-motion"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper ant-drawer-panel-motion-left"
        style="width: 280px;"
      >
        <div
          aria-labelledby="id"
          aria-modal="true"
          class="ant-drawer-content"
          role="dialog"
        >
          <div
            class="ant-drawer-header"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Закрыть"
                class="ant-drawer-close"
                type="button"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="ant-drawer-title"
                id="id"
              >
                Категории
              </div>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            <div
              class="ant-flex ant-flex-wrap-wrap"
              style="gap: 8px;"
            >
              <span>
                <span
                  class="ant-tag ant-tag-checkable"
                  style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
                >
                  <span>
                    Алоэ
                  </span>
                </span>
              </span>
              <span>
                <span
                  class="ant-tag ant-tag-checkable"
                  style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
                >
                  <span>
                    Пальмы
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`CategoryCloudDrawer > не меняет выбор выключенной панели и прячется 1`] = `
<div>
  <aside
    aria-label="Фильтр по категориям"
    style="background: rgb(230, 244, 255); border: 1px solid rgb(145, 202, 255); border-radius: 8px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
      0 1px 6px -1px rgba(0, 0, 0, 0.02),
      0 2px 4px 0 rgba(0, 0, 0, 0.02); flex-shrink: 0; padding: 16px; width: 280px;"
  >
    <span
      class="ant-typography"
      style="color: rgb(22, 119, 255); display: block; margin-bottom: 12px;"
    >
      <strong>
        Категории
      </strong>
    </span>
    <span
      class="ant-typography ant-typography-secondary"
    >
      Категорий пока нет — они появятся у растений с указанной категорией.
    </span>
  </aside>
</div>
`;
